sonar: ignore 'Pointers should not be cast to integral types' and bump version to 3.13.91

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,8 +90,8 @@ endif()
 
 set(SIMGRID_VERSION_MAJOR "3")
 set(SIMGRID_VERSION_MINOR "13")
-set(SIMGRID_VERSION_PATCH "90")
-set(SIMGRID_VERSION_EXTRA "-prealpha") # Extra words to add to version string (e.g. -rc1)
+set(SIMGRID_VERSION_PATCH "91")
+set(SIMGRID_VERSION_EXTRA "-alpha") # Extra words to add to version string (e.g. -rc1)
 
 set(SIMGRID_VERSION_DATE  "2016") # Year for copyright information
 
