--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,11 +3,14 @@
 
 sonar.projectKey=simgrid
 sonar.projectName=SimGrid
-sonar.projectVersion=3.13.90
+sonar.projectVersion=3.13.91
 
 sonar.links.homepage=http://simgrid.org
 sonar.links.issue=https://github.com/simgrid/simgrid/issues
 sonar.links.scm=https://github.com/simgrid/simgrid.git
+
+# Pointers should not be cast to integral types -- we need that for jMSG
+sonar.exclusions:cpp:S1767
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src,examples,include,teshsuite
@@ -38,9 +41,6 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 sonar.sourceEncoding=UTF-8
 
 sonar.java.source=7
-
-# Disable the whole logging mechanism during SonarQube analysis (our logging macro are crude, but should not harm Sonar)
-# sonar.cfamily.predefinedMacros=#define XBT_LOG_MAYDAY
 
 # Talk to me (travis don't like it, it's too much)
 # sonar.verbose=true
