sonar: try harder to not choke on casting pointers into literals

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.links.issue=https://github.com/simgrid/simgrid/issues
 sonar.links.scm=https://github.com/simgrid/simgrid.git
 
 # Pointers should not be cast to integral types -- we need that for jMSG
-sonar.exclusions:cpp:S1767
+sonar.exclusions=cpp:S1767
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src,examples,include,teshsuite
