--- a/include/simgrid_config.h.in
+++ b/include/simgrid_config.h.in
@@ -18,10 +18,15 @@
 
 #define SIMGRID_VERSION_STRING "@SIMGRID_VERSION_STRING@"
 
-#define HAVE_JEDULE     @HAVE_JEDULE@ /* Was Jedule compiled in?  */
-#define HAVE_LUA        @HAVE_LUA@ /* Was the Lua support compiled in? */
-#define HAVE_MALLOCATOR @HAVE_MALLOCATOR@ /* Were mallocators (object pools) compiled in? */
-#define HAVE_MC         @HAVE_MC@ /* Was the model-checking compiled in? */
-#define HAVE_NS3        @HAVE_NS3@ /* Was the NS3 support compiled in? */
+/* Was Jedule compiled in?  */
+#cmakedefine01 HAVE_JEDULE
+/* Was the Lua support compiled in? */
+#cmakedefine01 HAVE_LUA
+/* Were mallocators (object pools) compiled in? */
+#cmakedefine01 HAVE_MALLOCATOR
+/* Was the model-checking compiled in? */
+#cmakedefine01 HAVE_MC
+/* Was the NS3 support compiled in? */
+#cmakedefine01 HAVE_NS3
 
 #endif /* SIMGRID_PUBLIC_CONFIG_H */
