replay_multiple_manual_deploy 2 binary files

--- a/examples/smpi/replay_multiple_manual_deploy/Makefile
+++ b/examples/smpi/replay_multiple_manual_deploy/Makefile
@@ -2,7 +2,12 @@ CXX=clang++
 CXXFLAGS=-Wall -Wextra -g -std=c++11
 LDFLAGS=-lsimgrid
 
-replay_mnd: replay_multiple.cpp
+all: replay_mnd_hack replay_mnd_usual
+
+replay_mnd_hack: replay_multiple_hack.cpp
+	$(CXX) -o $@ $< $(LDFLAGS) $(CXXFLAGS)
+
+replay_mnd_usual: replay_multiple_usual.cpp
 	$(CXX) -o $@ $< $(LDFLAGS) $(CXXFLAGS)
 
 clean:
