--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,8 +20,9 @@ environment:
 
 install:
 # Strawberry perl is the one to work with gcc; AppVeyor provides ActiveState perl, which is the one to work with visual.
-- choco install --limit-output strawberryperl --version 5.20.1.1
-- SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
+# This package is so outdated and broken that we cannot use it anymore. So we build without perl
+# - choco install --limit-output strawberryperl --version 5.20.1.1
+# - SET PATH=C:\strawberry\c\bin;C:\strawberry\perl\site\bin;C:\strawberry\perl\bin;%PATH%
 # Lua 
 #- choco install lua53
 # We need python v3
