--- a/include/simgrid_config.h.in
+++ b/include/simgrid_config.h.in
@@ -14,6 +14,8 @@
 #define SIMGRID_VERSION_MAJOR @SIMGRID_VERSION_MAJOR@
 #define SIMGRID_VERSION_MINOR @SIMGRID_VERSION_MINOR@
 #define SIMGRID_VERSION_PATCH @SIMGRID_VERSION_PATCH@
+#define SIMGRID_GIT_VERSION   "@GIT_VERSION@"
+#define SIMGRID_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
 
 SG_BEGIN_DECL()
 /** Retrieves the version numbers of the used dynamic library (so, DLL or dynlib), while
