In smpiff/smpif90 program, make -o consume the next argument.
Else, when used for example in preprocessor mode, the output
file, name something.f would be interpreted as an input file
by the argument parsing loop.

--- a/src/smpi/smpif90.in
+++ b/src/smpi/smpif90.in
@@ -65,6 +65,10 @@ while [ $# -gt 0 ]; do
         '-compiler-version' | '--compiler-version')
             ${F90} --version
             ;;
+        -o)
+            list_add CMDLINE "-o$1"
+            shift
+            ;;
         *)
             list_add CMDLINE "${ARG}"
             ;;
