Make these example files compile

--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,10 @@ tags
 callgrind.out.*
 ### Examples and traces
 *.exe
+doc/msg-tuto-src/masterworker1
+doc/msg-tuto-src/masterworker2
+doc/msg-tuto-src/masterworker3
+doc/msg-tuto-src/masterworker4
 examples/msg/actions-comm/actions-comm
 examples/msg/actions-storage/actions-storage
 examples/msg/async-wait/async-wait
