--- a/.gitignore
+++ b/.gitignore
@@ -979,6 +979,7 @@ examples/java/app/centralizedmutex/java_app_centralizedmutex_compiled
 examples/java/app/masterworker/java_app_masterworker_compiled
 examples/java/app/pingpong/java_app_pingpong_compiled
 examples/java/app/tokenring/java_app_tokenring_compiled
+examples/java/async/yield/java_async_yield_compiled
 examples/java/async/dsend/java_async_dsend_compiled
 examples/java/async/waitall/java_async_waitall_compiled
 examples/java/dht/chord/java_dht_chord_compiled
