sonar: these checks are just wrong in our context

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,12 +8,19 @@ sonar.projectVersion=3.13.91
 sonar.links.homepage=http://simgrid.org
 sonar.links.issue=https://github.com/simgrid/simgrid/issues
 sonar.links.scm=https://github.com/simgrid/simgrid.git
-
-# Pointers should not be cast to integral types -- we need that for jMSG
-sonar.exclusions=cpp:S1767
-
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src,examples,include,teshsuite
+
+# Disable some rules on some files
+sonar.issue.ignore.multicriteria=j1,c1
+
+# The Object.finalize() method should not be overriden -- we need to clean the native memory
+sonar.issue.ignore.multicriteria.j1.ruleKey=squid:ObjectFinalizeOverridenCheck
+sonar.issue.ignore.multicriteria.j1.resourceKey=**/*.java
+
+# Pointers should not be cast to integral types -- we need that for jMSG
+sonar.issue.ignore.multicriteria.c1.ruleKey=cpp:S1767
+sonar.issue.ignore.multicriteria.c1.resourceKey=**/*.cpp
 
 # Exclude some files from the analysis:
 #  - our unit tests 
