smpirun: gracefuly handle the case where the user forgets to give a program to execute

--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -241,6 +241,13 @@ while true; do
     esac
 done
 
+# check if we still have at least one parameter beyond options
+if [ $# -eq 0 ]
+then
+    usage
+    exit
+fi
+
 if [ -n "$WRAPPER" ]; then
     EXEC="$WRAPPER $1"
 else
