be even more informative to the user

--- a/src/smpi/smpirun.in
+++ b/src/smpi/smpirun.in
@@ -244,6 +244,7 @@ done
 # check if we still have at least one parameter beyond options
 if [ $# -eq 0 ]
 then
+    echo "Error: no program to execute!"
     usage
     exit
 fi
