--- a/teshsuite/smpi/mpich3-test/CMakeLists.txt
+++ b/teshsuite/smpi/mpich3-test/CMakeLists.txt
@@ -17,7 +17,7 @@ set(txt_files  ${txt_files}  ${CMAKE_CURRENT_SOURCE_DIR}/README
                              ${CMAKE_CURRENT_SOURCE_DIR}/checktests
                              ${CMAKE_CURRENT_SOURCE_DIR}/generate_report
                              ${CMAKE_CURRENT_SOURCE_DIR}/util/dtypes.c
-                             ${CMAKE_CURRENT_SOURCE_DIR}/util/mtest.
+                             ${CMAKE_CURRENT_SOURCE_DIR}/util/mtest.c
                              ${CMAKE_CURRENT_SOURCE_DIR}/util/mtestcheck.c
                              ${CMAKE_CURRENT_SOURCE_DIR}/util/mtest_datatype.c
                              ${CMAKE_CURRENT_SOURCE_DIR}/util/mtest_datatype_gen.c
