--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,8 +11,9 @@ sonar.links.scm=https://github.com/simgrid/simgrid.git
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src,examples,include,teshsuite
 
+
 # Disable some rules on some files
-sonar.issue.ignore.multicriteria=j1,c1
+sonar.issue.ignore.multicriteria=j1,c1,c2
 
 # The Object.finalize() method should not be overriden -- we need to clean the native memory
 sonar.issue.ignore.multicriteria.j1.ruleKey=squid:ObjectFinalizeOverridenCheck
@@ -21,6 +22,12 @@ sonar.issue.ignore.multicriteria.j1.resourceKey=**/*.java
 # Pointers should not be cast to integral types -- we need that for jMSG
 sonar.issue.ignore.multicriteria.c1.ruleKey=cpp:S1767
 sonar.issue.ignore.multicriteria.c1.resourceKey=**/*.cpp
+
+# Preprocessor operators "#" and "##" should not be used
+# This poses portability issues, but we check our usage on a large panel of architectures on purpose
+sonar.issue.ignore.multicriteria.c2.ruleKey=cpp:PPStringifyAndPastingUsage
+sonar.issue.ignore.multicriteria.c2.resourceKey=**/*.cpp
+
 
 # Exclude some files from the analysis:
 #  - our unit tests 
