sonar: fix a regex

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -41,7 +41,7 @@ sonar.issue.ignore.multicriteria.c3.resourceKey=include/smpi/smpi_extended_trace
 #  - Flex-generated files
 #  - Collectives that we borrowed elsewhere (mpich, openMPI and other implems)
 #  - the NAS, that are included in our examples
-sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/**,teshsuite/smpi/isp/**,**/*_dtd.[ch],**/*yy.c,src/smpi/colls/*,examples/smpi/NAS/*
+sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/**,teshsuite/smpi/isp/**,**/*_dtd.c,**/*_dtd.h,**/*yy.c,src/smpi/colls/*,examples/smpi/NAS/*
 
 # Ignore some files based on regex on their content (not working)
 #sonar.issue.ignore.allfile=flexGenerated,flexMLGenerated
