--- a/src/smpi/smpicc.in
+++ b/src/smpi/smpicc.in
@@ -19,7 +19,9 @@ CMAKE_LINKARGS="-L@libdir@"
 list_set CFLAGS
 list_set LINKARGS
 if [ "@WIN32@" != "1" ]; then
-    list_add CFLAGS "-Dmain=smpi_simulated_main_"
+    # list_add CFLAGS "-Dmain=smpi_simulated_main_"
+    list_add CFLAGS "-fpic"
+    list_add LINKARGS "-fpic"
     list_add LINKARGS "-lsimgrid"
 else
     list_add CFLAGS "-include" "@includedir@/smpi/smpi_main.h"
