--- a/include/smpi/mpif.h.in
+++ b/include/smpi/mpif.h.in
@@ -125,10 +125,15 @@
       parameter(MPI_STATUS_SIZE=4)
 
 ! These should be ordered as in smpi_f77.c
-      integer MPI_IN_PLACE, MPI_BOTTOM
-      integer MPI_STATUS_IGNORE, MPI_STATUSES_IGNORE
-      common /smpi/ MPI_IN_PLACE, MPI_BOTTOM
-      common /smpi/ MPI_STATUS_IGNORE, MPI_STATUSES_IGNORE
+
+      integer MPI_IN_PLACE
+      parameter(MPI_IN_PLACE=-100)
+      integer MPI_BOTTOM
+      parameter(MPI_BOTTOM=-200)
+      integer MPI_STATUS_IGNORE
+      parameter(MPI_STATUS_IGNORE=-300)
+      integer MPI_STATUSES_IGNORE
+      parameter(MPI_STATUSES_IGNORE=-400)
 
       integer MPI_REQUEST_NULL
       parameter(MPI_REQUEST_NULL=-1)
