--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -40,13 +40,20 @@ sonar.issue.ignore.multicriteria.c3.resourceKey=**/*.cpp
 sonar.issue.ignore.multicriteria.c4.ruleKey=c:PPMacroName
 sonar.issue.ignore.multicriteria.c4.resourceKey=include/smpi/smpi_extended_traces.h
 
+
+
 # Exclude some files from the analysis:
 #  - our unit tests 
 #  - the tests that we borrowed elsewhere (MPICH and ISP)
 #  - Flex-generated files
 #  - Collectives that we borrowed elsewhere (mpich, openMPI and other implems)
 #  - the NAS, that are included in our examples
-sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/**,teshsuite/smpi/isp/**,**/*_dtd.c,**/*_dtd.h,**/*yy.c,src/smpi/colls/*,examples/smpi/NAS/*
+#  - RngStream, that is included in SimGrid
+sonar.exclusions=src/*_unit.c*,teshsuite/smpi/mpich3-test/**,teshsuite/smpi/isp/**,**/*_dtd.c,**/*_dtd.h,**/*yy.c,src/smpi/colls/*,examples/smpi/NAS/*,src/xbt/RngStream.c,include/xbt/RngStream.h
+
+# Exclude our examples from the duplication detection.
+# Examples are expected to be somehow repetitive
+sonar.cpd.exclusions=examples/**
 
 # Ignore some files based on regex on their content (not working)
 #sonar.issue.ignore.allfile=flexGenerated,flexMLGenerated
@@ -70,6 +77,8 @@ sonar.cfamily.build-wrapper-output=bw-outputs
 sonar.sourceEncoding=UTF-8
 
 sonar.java.source=7
+sonar.c.std=gnu11
+sonar.cpp.std=gnu++11
 
 # Talk to me (travis don't like it, it's too much)
 # sonar.verbose=true
